--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assessment</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="stylesheet"></script>
 </head>
 <body style="color: color: #fdf6f0;;">
